make the section without an adaptive

--- a/index.html
+++ b/index.html
@@ -64,7 +64,40 @@
          </div>
       </header>
 
-      <main></main>
+
+      <main>
+         <section class="first-screen">
+            <div class="container">
+               <div class="first-screen__body">
+                  <a href="#">
+                     <div class="first-screen__collection">
+                        <h1 class="first-screen__title">HIGH JEWELRY</h1>
+                        <span class="first-screen__subtitle">Смотреть коллекцию</span>
+                     </div>
+                  </a>
+                  <a href="#">
+                     <div class="first-screen__offer-img">
+                        <img src="img/first-screen/ring-trinity-cartier.png" alt="КОЛЬЦО TRINITY, Cartier">
+                     </div>
+                  </a>
+                  <div class="first-screen__column">
+                     <div class="first-screen__language language">
+                        <a href="#" class="active">RU</a>
+                        <a href="#">EN</a>
+                     </div>
+                     <a href="#">
+                        <div class="first-screen__offer offer offer_white">
+                           <div class="offer__name">КОЛЬЦО TRINITY, Cartier</div>
+                           <div class="offer__description">Белое золото, бриллианты</div>
+                           <div class="offer__price">498 000 ₽</div>
+                        </div>
+                     </a>
+                  </div>
+               </div>
+            </div>
+         </section>
+      </main>
+
       <footer>footer</footer>
    </div>
 
