make first-screen with full adaptive

--- a/index.html
+++ b/index.html
@@ -70,9 +70,9 @@
             <div class="container">
                <div class="first-screen__body">
                   <a href="#">
-                     <div class="first-screen__collection">
-                        <h1 class="first-screen__title">HIGH JEWELRY</h1>
-                        <span class="first-screen__subtitle">Смотреть коллекцию</span>
+                     <div class="first-screen__collection collection">
+                        <h1 class="collection__title">HIGH JEWELRY</h1>
+                        <span class="collection__subtitle">Смотреть коллекцию</span>
                      </div>
                   </a>
                   <a href="#">
