make section - sections of products

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
    <div class="wrapper">
 
       <header class="header">
-         <div class="container">
+         <div class="container container_padding">
             <div class="header__body">
                <div class="header__column">
                   <svg class="logo">
@@ -67,7 +67,7 @@
 
       <main>
          <section class="first-screen">
-            <div class="container">
+            <div class="container container_padding">
                <div class="first-screen__body">
                   <a href="#">
                      <div class="first-screen__collection collection">
@@ -93,6 +93,27 @@
                         </div>
                      </a>
                   </div>
+               </div>
+            </div>
+         </section>
+         <section class="sections">
+            <div class="container">
+               <div class="sections__list section-list">
+                  <div class="section-list__row">
+                     <a href="#" class="section-list__item section-item">
+                        <img src="img/sections/for-men.png" alt="for men">
+                        <div class="section-item__content">
+                           <h2 class="section-item__text">Для мужчин</h2>
+                        </div>
+                     </a>
+                     <a href="#" class="section-list__item section-item">
+                        <img src="img/sections/for-women.png" alt="for women">
+                        <div class="section-item__content">
+                           <h2 class="section-item__text">Для женщин</h2>
+                        </div>
+                     </a>
+                  </div>
+
                </div>
             </div>
          </section>
