Add hover effects for the header

--- a/index.html
+++ b/index.html
@@ -26,31 +26,25 @@
                <div class="header__column">
                   <div class="header__personal-area personal-area">
                      <div class="personal-area__column">
-                        <a href="#">
-                           <div class="personal-area__item">
-                              <svg class="personal-area__icon">
-                                 <use href="img/icons-sprite.svg#heart"></use>
-                              </svg>
-                           </div>
+                        <a href="#" class="personal-area__item">
+                           <svg class="personal-area__icon">
+                              <use href="img/icons-sprite.svg#heart"></use>
+                           </svg>
                         </a>
                      </div>
                      <div class="personal-area__column">
-                        <a href="#">
-                           <div class="personal-area__item">
-                              <svg class="personal-area__icon">
-                                 <use href="img/icons-sprite.svg#person"></use>
-                              </svg>
-                           </div>
+                        <a href="#" class="personal-area__item">
+                           <svg class="personal-area__icon">
+                              <use href="img/icons-sprite.svg#person"></use>
+                           </svg>
                         </a>
                      </div>
                      <div class="personal-area__column">
-                        <a href="#">
-                           <div class="personal-area__item">
-                              <svg class="personal-area__icon">
-                                 <use href="img/icons-sprite.svg#lock"></use>
-                              </svg>
-                              <span>1</span>
-                           </div>
+                        <a href="#" class="personal-area__item">
+                           <svg class="personal-area__icon">
+                              <use href="img/icons-sprite.svg#lock"></use>
+                           </svg>
+                           <span>1</span>
                         </a>
                      </div>
                   </div>
@@ -96,6 +90,8 @@
                </div>
             </div>
          </section>
+
+
          <section class="sections">
             <div class="container">
                <div class="sections__list section-list">
