make offers-section for desktop

--- a/index.html
+++ b/index.html
@@ -113,6 +113,64 @@
                </div>
             </div>
          </section>
+
+         <div class="offers">
+            <div class="container">
+               <div class="offers__body">
+                  <div class="offers__card card card_general">
+                     <div class="card__img">
+                        <img src="img/offers/jow’s-Cartier.png" alt="Кольцо jow’s, Cartier">
+                     </div>
+                     <div class="card__offer offer">
+                        <div class="offer__name">КОЛЬЦО jow’s, Cartier</div>
+                        <div class="offer__description">Белое золото, бриллианты</div>
+                        <div class="offer__price">674 000 ₽</div>
+                     </div>
+                  </div>
+                  <div class="offers__card card card_full">
+                     <div class="card__img">
+                        <img src="img/offers/etoile-HUBLOT.jpg" alt="Колье etoile, HUBLOT">
+                     </div>
+                     <div class="card__offer offer offer_white">
+                        <div class="offer__name">Колье etoile, HUBLOT</div>
+                        <div class="offer__description">Белое золото, бриллианты</div>
+                        <div class="offer__price">539 000 ₽</div>
+                     </div>
+                  </div>
+                  <div class="offers__card card card_general">
+                     <div class="card__img">
+                        <img src="img/offers/moon-HUBLOT.png" alt="Серьги moon, HUBLOT">
+                     </div>
+                     <div class="card__offer offer">
+                        <div class="offer__name">Серьги moon, HUBLOT</div>
+                        <div class="offer__description">Желтое золото, сапфир</div>
+                        <div class="offer__price">498 000 ₽</div>
+                     </div>
+                  </div>
+                  <div class="offers__card card card_general">
+                     <div class="card__img">
+                        <img src="img/offers/croix-Cartier.png" alt="Кольцо croix, Cartier">
+                     </div>
+                     <div class="card__offer offer">
+                        <div class="offer__name">КОЛЬЦО croix, Cartier</div>
+                        <div class="offer__description">Желтое, белое, розовое золото</div>
+                        <div class="offer__price">432 000 ₽</div>
+                     </div>
+                  </div>
+                  <div class="offers__card card card_general">
+                     <div class="card__img">
+                        <img src="img/offers/win-BLANCPAIN.png" alt="Кольцо croix, Cartier">
+                     </div>
+                     <div class="card__offer offer">
+                        <div class="offer__name">серьги win, BLANCPAIN</div>
+                        <div class="offer__description">Желтое золото, жемчуг</div>
+                        <div class="offer__price">398 000 ₽</div>
+                     </div>
+                  </div>
+
+               </div>
+            </div>
+         </div>
       </main>
 
       <footer>footer</footer>
