make balloons on touchscreen

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
    <title>MOON RIVER</title>
    <script src="https://api-maps.yandex.ru/2.1/?apikey=3da63c7b-3849-41e9-a56f-c477948c78c2&lang=ru_RU"
       type="text/javascript"></script>
+   <script src="https://yandex.st/jquery/2.2.3/jquery.min.js" type="text/javascript"></script>
    <link rel="icon" href="img/favicon-32x32.png">
    <link rel="stylesheet" href="css/styles.css">
 </head>
